nav bar functioning

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
   <body>
 
-    <section id="home page" name="home">
+    <section id="home">
       <section id="nav bar">
         <div id="nav">
           <ul>
@@ -142,8 +142,7 @@
       </div>
     </section>
 
-    <section id="character introduction">
-      <a name="characters"></a>
+    <section id="characters">
       <h2>Meet the Zodiacs!</h2>
       <p> Double click the zodiacs to learn more about them!</p>
 
