--- a/index.html
+++ b/index.html
@@ -104,9 +104,11 @@
     }
 
     .character-description {
-      padding-top: 20px;
       font-family: TongTong;
       font-size: 24px;
+      padding-right: 50px;
+      padding-left: 50px;
+      text-align: center;
     }
 
     .label {
