--- a/index.html
+++ b/index.html
@@ -103,6 +103,11 @@
       text-align: center;
     }
 
+    table {
+      border: none;
+      text-align: center;
+    }
+    
     .character-description {
       font-family: TongTong;
       font-size: 24px;
