--- a/index.html
+++ b/index.html
@@ -124,11 +124,11 @@
     
     .input-button {
       font-family: TongTong;
-      font-size: 16px;
+      font-size: 24px;
       border: none;
       border-radius: 5px;
-      width: 70px;
-      height: 30px;
+      width: 100px;
+      height: 40px;
       color: black;
       background-color: white;
     }
@@ -157,6 +157,7 @@
     
     input:focus, textarea:focus {
       outline: none;
+      border-color: white;
     }
   </style>
 
@@ -646,7 +647,7 @@
         <label class="label">E-mail:</label><br>
         <input type="text" class="input-field" name="mail"><br>
         <label class="label">Message:</label><br>
-        <textarea name="message" size="50"></textarea><br><br>
+        <textarea name="message"></textarea><br><br>
         <input class="input-button" type="submit" value="Send">
       </form>
 
