--- a/index.html
+++ b/index.html
@@ -156,6 +156,8 @@
     }
     
     input:focus, textarea:focus {
+      font-family: TongTong;
+      font-size: 20px;
       outline: none;
       border-color: white;
     }
