fixed typo "ggressive" in rooster description to "aggressive"

--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@
                   let x = document.getElementById("RoosterTxt");
                   let y = document.getElementById("RoosterImg");
                   if (x.innerHTML === "Rooster 鸡") {
-                    x.innerHTML = "Years: 1945, 1957, 1969, 1981, 1993, 2005, 2017, 2029 <br> Traits: pay very close attention to their appearances and actions, great performers, hard-working, leaders, dependable, ggressive and picky";
+                    x.innerHTML = "Years: 1945, 1957, 1969, 1981, 1993, 2005, 2017, 2029 <br> Traits: pay very close attention to their appearances and actions, great performers, hard-working, leaders, dependable, aggressive and picky";
                     y.src = "rooster hover.png";
                   } else {
                     x.innerHTML = "Rooster 鸡";
